log/build_2025-02-02_23-19-35/my_py_pkg/stderr.log
  File "/home/anand289/ros2_ws/install/my_py_pkg/lib/python3.12/site-packages/my_py_pkg/my_first_node.py", line 16
    self.get_logger().info("Hello" str(self.counter))
                           ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

